--- a/_config/_config.yml
+++ b/_config/_config.yml
@@ -35,10 +35,10 @@ MoritzSauer\LinkedPagesElement:
                 Content: true
                 BadgeID: false
                 BadgePosition: false
-                VideoAutoPlay: true
-                VideoLoop: true
-                VideoMuted: true
-                VideoControls: true
+                AutoPlay: true
+                Loop: true
+                Muted: true
+                Controls: true
                 PreviewImageID: true
                 VideoMP4ID: true
                 VideoOGVID: true
@@ -74,10 +74,10 @@ MoritzSauer\LinkedPagesElement:
                 Content: true
                 BadgeID: false
                 BadgePosition: false
-                VideoAutoPlay: false
-                VideoLoop: false
-                VideoMuted: false
-                VideoControls: false
+                AutoPlay: false
+                Loop: false
+                Muted: false
+                Controls: false
                 PreviewImageID: false
                 VideoMP4ID: false
                 VideoOGVID: false
@@ -113,10 +113,10 @@ MoritzSauer\LinkedPagesElement:
                 Content: true
                 BadgeID: true
                 BadgePosition: true
-                VideoAutoPlay: false
-                VideoLoop: false
-                VideoMuted: false
-                VideoControls: false
+                AutoPlay: false
+                Loop: false
+                Muted: false
+                Controls: false
                 PreviewImageID: false
                 VideoMP4ID: false
                 VideoOGVID: false
@@ -152,10 +152,10 @@ MoritzSauer\LinkedPagesElement:
                 Content: true
                 BadgeID: false
                 BadgePosition: false
-                VideoAutoPlay: false
-                VideoLoop: false
-                VideoMuted: false
-                VideoControls: false
+                AutoPlay: false
+                Loop: false
+                Muted: false
+                Controls: false
                 PreviewImageID: false
                 VideoMP4ID: false
                 VideoOGVID: false
@@ -191,10 +191,10 @@ MoritzSauer\LinkedPagesElement:
                 Content: false
                 BadgeID: false
                 BadgePosition: false
-                VideoAutoPlay: false
-                VideoLoop: false
-                VideoMuted: false
-                VideoControls: false
+                AutoPlay: false
+                Loop: false
+                Muted: false
+                Controls: false
                 PreviewImageID: false
                 VideoMP4ID: false
                 VideoOGVID: false
@@ -230,10 +230,10 @@ MoritzSauer\LinkedPagesElement:
                 Content: true
                 BadgeID: false
                 BadgePosition: false
-                VideoAutoPlay: false
-                VideoLoop: false
-                VideoMuted: false
-                VideoControls: false
+                AutoPlay: false
+                Loop: false
+                Muted: false
+                Controls: false
                 PreviewImageID: false
                 VideoMP4ID: false
                 VideoOGVID: false
