--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
     "dnadesign/silverstripe-elemental": "^4",
     "axllent/silverstripe-scss": "^1.8",
     "unclecheese/silverstripe-image-optionset": "^2.0",
-    "buckleshusky/fontawesomeiconpicker": "^3.0"
+    "buckleshusky/fontawesomeiconpicker": "^3.0 | ^2"
   },
   "autoload": {
     "psr-4": {
