--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
     "dnadesign/silverstripe-elemental": "^5",
     "axllent/silverstripe-scss": "^1.8",
     "moritz-sauer-13/silverstripe-image-optionset": "^0.1.0",
-    "buckleshusky/fontawesomeiconpicker": "^3.0 | ^2"
+    "buckleshusky/fontawesomeiconpicker": "^3.0 | ^2",
+    "silverstripe/linkfield": "^3"
   },
   "autoload": {
     "psr-4": {
